# MedRoom.AI.Test.Architecture

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
docs/: activity_specification.md
src/calculators/: similarity_bert_calculator.py
src/pipelines/: pipeline_creator.py
src/processors/: text_processor_utils.py
tests/unit/calculators/: similarity_bert_calculator_test.py  test_similarity_bert_calculator.py
tests/unit/pipelines/: pipeline_creator_test.py  test_pipeline_creator.py
tests/unit/processors/: test_text_processor_utils.py  text_processor_utils_test.py
